# sommelier-auction-rs

./: Cargo.toml  LICENSE-MIT  README.md  example-config.toml
.github/: release.yaml
.github/workflows/: release.yml
crates/price_feed/: Cargo.toml
crates/price_feed/src/: lib.rs
crates/sommelier-auction/: Cargo.toml
crates/sommelier-auction-order-engine/: Cargo.toml
crates/sommelier-auction-order-engine/src/: config.rs  engine.rs  lib.rs  order.rs  util.rs  watcher.rs
crates/sommelier-auction-proto/: Cargo.toml
crates/sommelier-auction-proto-build/: Cargo.toml
crates/sommelier-auction-proto-build/src/: main.rs
crates/sommelier-auction-proto/src/: lib.rs
crates/sommelier-auction/src/: bid.rs  client.rs  denom.rs  lib.rs  parameters.rs
crates/sommelier-auction/tests/: client.rs
