[package]
name = "price_feed"
version = "0.1.0"
verson.workspace = true
authors.workspace = true
edition.workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
coingecko = "1.0.1"
eyre.workspace = true

[dev-dependencies]
tokio = { version = "1", features = ["full"] }
