[package]
name = "sommelier-auction-proto"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
prost.workspace = true
tonic.workspace = true

prost-types = "0.7"
bytes = "1"
cosmos-sdk-proto = "0.6.3"
serde = "1.0"
